# Maroow

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt
.agents/ralph/: PROMPT_build.md  config.sh
.agents/tasks/: prd-marrow-runtime.json
.serena/: project.yml
assets/fixtures/: ik_constraints.mskl  inherit_modes_nonuniform_scale.mskl  linked_mesh_deform_inheritance.mskl  path_transform_constraints.mskl  physics_constraints.mskl  player_idle.marrow  player_idle.matl  player_idle.mbin  player_idle.mskl  psd_import_sample.psd  psd_import_sample_reimport.psd  skin_inherit_constraints.mskl  spine_import_sample.atlas  spine_import_sample.json  spine_import_sample.mskl  spine_import_sample_fx_page.matl  spine_import_sample_hero_page.matl
assets/fixtures/atlas_pack_smoke/: atlas_pack_project.marrow  atlas_pack_source.mskl  packed_sprites.matl
assets/fixtures/exports/: player_idle.matl  player_idle.mbin  player_idle.mskl
docs/: Doxyfile.in  concepts.md  discription.md  fixtures.md  format-spec.md  quick-start.md  refector.md  research-engine-integration.md  research-spine-import-atlas-packing.md  ui-design-spec.md  ui-implementation-plan.md
docs/design/: maroow-editor-visual-renewal-spec.md
docs/root1/: agent-control-mcp-plan.md  agent-control.md  fixtures.md  ralph-loop.md
docs/stitch/animation_mode_timeline/: code.html
docs/stitch/charcoal_studio/: DESIGN.md  P1_VIEWPORT_TOOL_PROMPTS.md  P2_TREE_VIEW_PROMPTS.md  P3_PROPERTY_STATUS_PROMPTS.md  UI_ICON_ASSET_PLAN.md
docs/stitch/constraints_assets/: code.html
docs/stitch/main_layout_setup_pose/: code.html
docs/stitch/maroow_integrated/: code.html
docs/stitch/weight_painting_tool/: code.html
include/marrow/: allocator.hpp  marrow_c.h
include/marrow/editor/: agent_dispatch.hpp  module.hpp  project.hpp  psd_import.hpp
include/marrow/renderer/: module.hpp
include/marrow/runtime/: animation.hpp  animation_compare.hpp  animation_state.hpp  atlas.hpp  json.hpp  module.hpp  profiler.hpp  skeleton.hpp  spine_import.hpp
src/: main.cpp
src/c_api/: marrow_c.cpp
src/editor/: agent_dispatch.cpp  agent_socket.cpp  agent_socket.hpp  atlas_packer.cpp  atlas_packer.hpp  icon_registry.cpp  icon_registry.hpp  image_io.hpp  macos_app_focus.hpp  macos_app_focus.mm  module.cpp  project.cpp  psd_import.cpp  shell_core.cpp  shell_main.cpp  shell_smoke.cpp  shell_theme.hpp  shell_types.hpp  shell_viewport.cpp  shell_widgets.cpp  shell_widgets.hpp  viewport_renderer.cpp  viewport_renderer.hpp
src/renderer/: marrow_renderer_shader.glsl  module.cpp  module_internal.hpp  sokol_backend.cpp
src/runtime/: allocator.cpp  animation.cpp  animation_state.cpp  atlas.cpp  binary.cpp  json.cpp  module.cpp  profiler.cpp  skeleton.cpp  skeleton_animation.cpp  skeleton_constraints.cpp  skeleton_internal.hpp  skeleton_parse.cpp  skeleton_physics.cpp  skeleton_skin.cpp  skeleton_world.cpp  spine_import.cpp
src/samples/: agent_dispatch_smoke.cpp  atlas_packer_smoke.cpp  editor_project_smoke.cpp  marrow_benchmark.cpp  marrow_c_smoke.c  psd_import_smoke.cpp  renderer_sample.cpp  runtime_fixture_smoke.cpp  runtime_inspect.cpp  spine_import_smoke.cpp  spine_to_marrow.cpp
src/tests/: runtime_math_tests.cpp  runtime_thread_stress.cpp
tools/mcp/: README.md  pyproject.toml  server.py  test_client.py
tools/mcp/prompts/: workflows.py
tools/mcp/resources/: scene.py
tools/mcp/tools/: editing.py  inspection.py
