[project]
name = "marrow-control"
version = "0.1.0"
description = "MCP server for controlling Maroow 2D animation editor"
authors = [{ name = "Maroow Team" }]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
